Add pkg/repository; Refactoring Swagger docs
