# app/models/auth_model.go
@@ -4,7 +4,7 @@ package models
 type SignUp struct {
 	Email    string `json:"email" validate:"required,email,lte=255"`
 	Password string `json:"password" validate:"required,lte=255"`
-	UserRole string `json:"user_role" validate:"required"`
+	UserRole string `json:"user_role" validate:"required,lte=25"`
 }
 
 // SignIn struct to describe login user.
