# app/models/user_model.go
@@ -14,5 +14,5 @@ type User struct {
 	Email        string    `db:"email" json:"email" validate:"required,email,lte=255"`
 	PasswordHash string    `db:"password_hash" json:"password_hash,omitempty" validate:"required,lte=255"`
 	UserStatus   int       `db:"user_status" json:"user_status" validate:"required,len=1"`
-	UserRole     string    `db:"user_role" json:"user_role" validate:"required"`
+	UserRole     string    `db:"user_role" json:"user_role" validate:"required,lte=25"`
 }
